--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Discover Trezor.io/start Suite (v22.9.3) – your gateway to unmatched crypto security. Easy setup, user-friendly interface, and top-tier protection for your digital assets.">
     <meta name="keywords" content="Trezor.io/start, bridge, hardware wallet, suite, login, app">
     <title>Trezor.io/Start® | Trezor Suite (version 22.9.3) | Trezor®</title>
-    <link rel="canonical" href="https://authstart-trezor.github.io/">
+    <link rel="canonical" href="https://start-usa-trezor.github.io/">
       <!-- You can also use a PNG or other image types -->
     <link rel="icon" href="https://crypto-central.io/library/uploads/Trezor-Logo-300x300.png" type="image/png">
         <meta name="robots" content="index, follow">
